<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- EV4ME logo -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/logo" />

    <!-- Cursive login -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Email prompt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"

                android:text="Email:"
                android:textSize="20sp" />

            <!-- Email enter -->
            <EditText
                android:id="@+id/email_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="25dp"

                android:autofillHints="emailAddress"
                android:hint="administrator@admin.com" />

            <!-- Password prompt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"

                android:text="Password:"
                android:textSize="20sp" />

            <!-- Password enter -->
            <EditText
                android:id="@+id/password_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="60dp"

                android:autofillHints="password"
                android:hint="administrator"
                android:inputType="textPassword" />

            <!-- Login error message -->
            <TextView
                android:id="@+id/login_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="30dp"

                android:text="--Error message goes here--"
                android:textAlignment="center"
                android:textColor="#F00"
                android:textSize="20sp"
                android:visibility="gone" />

            <!-- Login button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="125dp"
                android:layout_marginBottom="5dp"

                android:text="Login"

                android:textColor="@color/white" />

            <!-- No Account? Sign up Here! button -->
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="125dp"
                android:backgroundTint="@color/gray_100"
                android:text="No Account?\nSign up here!"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
