...
        <argument
            android:name="chargerListingInfo"
            app:argType="string"
            android:defaultValue="" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard_user"
        android:name="com.aims.ev4me.ui.main_activity.charger_dashboard.user.ChargerDashboardUserFragment"
        android:label="@string/bottom_navbar_title_chargerDashboard"
        tools:layout="@layout/fragment_charger_dashboard_user" />

    <fragment
        android:id="@+id/navigation_dashboard_lender"
        android:name="com.aims.ev4me.ui.main_activity.charger_dashboard.lender.ChargerDashboardLenderFragment"
        android:label="@string/bottom_navbar_title_chargerDashboard"
        tools:layout="@layout/fragment_charger_dashboard_lender" />

    <fragment
        android:id="@+id/navigation_profile"
...
